# DMFB2

./: .gitignore  CMakeLists.txt  Cmp.cpp  DMFB.h  Detector.h  Dispensation.cpp  Dispenser.cpp  Droplet.cpp  Droplet.h  DropletData.h  DropletDate.cpp  GridRecorder.h  Hash.cpp  Mixer.cpp  Mixer.h  README.md  State.cpp  State.h  Tools.h  bone.py  bone.txt  main.cpp  makefile  test.cpp  test.py
include/: Cell.h  Cmp.h  Global.h  IDMFB.h  Line.h  Path.h  State.h
include/core/: DMFB.h  Map.h  State.h  bfs_solver.h  brute_solver.h  greedy_bfs_solver.h  greedy_solver.h  greedy_state.h
include/droplet/: Droplet.h  DropletData.h
include/entities/: Detector.h  Dispenser.h  Sink.h
include/grid/: Cell.h  Grid.h  bone.h
include/math_models/: Point.h  sequencing_graph.h
include/placement/: placement.h  placing_strategy.h  random_placing_strategy.h
include/useless/: Check.h  Cmp.h  FlowNetwork.h  Hash.h  PlaceState.h  Wash.h  Washer.h  WasherRouter.h
material/: mix.txt  structure_S4_8x8.xlsx
material/Assays/: README_InterfaceFileFormats.txt
material/Chips/: 2d_bone.txt  README.txt
source/: Cmp.h  DMFB.cpp  Direction.h  Grid.cpp  GridRecorder.h  Point.cpp  Point.h  Sink.h
sources/: Cell.cpp  Cell.h  Check.cpp  Check.h  Cmp.cpp  Cmp.h  DMFB.cpp  DMFB.h  Detection.cpp  Detection.h  Detector.cpp  Detector.h  Direction.cpp  Dispensation.h  Dispenser.cpp  Dispenser.h  Droplet.cpp  Droplet.h  FlowNetwork.cpp  FlowNetwork.h  Global.cpp  Global.h  Grid.cpp  Grid.h  GridRecorder.cpp  Hash.cpp  Hash.h  Line.cpp  MixingOperation.cpp  MixingOperation.h  Path.cpp  PlaceState.cpp  PlaceState.h  Point.cpp  Point.h  Recorder.cpp  Recorder.h  Sink.cpp  Sink.h  State.cpp  (+10 more)
src/: Cell.cpp  Cmp.cpp  DMFB.cpp  DropletData.cpp  Global.cpp  Grid.cpp  Grid.h  IDMFB.cpp  State.cpp  WasherRouter.cpp  WasherRouter.h  main.cpp  main.cxx  pylib.cpp
src/core/: DMFB.cpp  Map.cpp  State.cpp  bfs_solver.cpp  brute_solver.cpp  greedy_bfs_solver.cpp  greedy_solver.cpp  greedy_state.cpp
src/droplet/: Droplet.cpp  DropletData.cpp
src/entities/: Detector.cpp  Dispenser.cpp  Sink.cpp
src/grid/: Cell.cpp  Grid.cpp
src/math_models/: Direction.cpp  Line.cpp  Point.cpp  sequencing_graph.cpp
src/placement/: random_placing_strategy.cpp
src/useless/: Check.cpp  Cmp.cpp  FlowNetwork.cpp  Hash.cpp  Path.cpp  PlaceState.cpp  WashState.cpp  Washer.cpp  WasherRouter.cpp
testcase/1/input/: SequencingGraph.txt
testcase/1/output/: 2.out
testcase/10/input/: SequencingGraph.txt
testcase/10/output/: 28.out  29.out  30.out  31.out  34.out  37.out  38.out  41.out  42.out
testcase/11/input/: SequencingGraph.txt
testcase/11/output/: 38.out  39.out  40.out  41.out  42.out  47.out  48.out  49.out  50.out
testcase/2/input/: SequencingGraph.txt
(+73 files in other folders)
